modified students hbs

--- a/WEB700/assignments/assign6/web700-app/views/students.hbs
+++ b/WEB700/assignments/assign6/web700-app/views/students.hbs
@@ -8,11 +8,12 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Student Number</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
+                        <th>Student Num</th>
+                        <th>Full Name</th>
                         <th>Email</th>
-                        <th>Course</th>
+                        <th>Address</th>
+                        <th>Status</th>
+                        <th>Course ID</th>
                         <th></th> <!-- Empty header for the delete button column -->
                     </tr>
                 </thead>
@@ -20,10 +21,11 @@
                     {{#each students}}
                     <tr>
                         <td>{{this.studentNum}}</td>
-                        <td>{{this.firstName}}</td>
-                        <td>{{this.lastName}}</td>
-                        <td>{{this.email}}</td>
-                        <td>{{this.courseCode}}</td>
+                        <td><a href="/student/{{this.studentNum}}">{{this.firstName}} {{this.lastName}}</a></td>
+                        <td><a href="mailto:{{this.email}}">{{this.email}}</a></td>
+                        <td>{{this.address}}</td>
+                        <td>{{this.status}}</td>
+                        <td><a href="/students?course={{this.course}}">{{this.course}}</a></td>
                         <td>
                             <a href="/student/delete/{{this.studentNum}}" class="btn btn-danger">Remove</a>
                         </td>
