--- a/WEB700/assignments/assign5/web700-app/views/students.hbs
+++ b/WEB700/assignments/assign5/web700-app/views/students.hbs
@@ -21,7 +21,7 @@
                           <td>{{this.studentNum}}</td>
                           <td><a href="/student/{{this.studentNum}}">{{this.firstName}} {{this.lastName}}</a></td>
                           <td><a href="mailto:{{this.email}}">{{this.email}}</a></td>
-                          <td>{{this.address}}</td>
+                          <td>{{this.addressStreet}}, {{this.addressCity}}, {{this.addressProvince}}</td>
                           <td>{{this.status}}</td>
                           <td><a href="/students?course={{this.course}}">{{this.course}}</a></td>
                       </tr>
